test/fail/or-pattern-mismatch.mo
let (#a a3) or (#b a3) : { #a : Nat; #b : Char } = #a 5;
